[package]
name = "bevy_turborand"
version = "0.3.0"
edition = "2021"
authors = ["Gonçalo Rica Pais da Silva <bluefinger@gmail.com>"]
description = "A plugin to enable ECS optimised random number generation for the Bevy game engine."
repository = "https://github.com/Bluefinger/bevy_turborand"
license = "Apache-2.0 OR MIT"
keywords = ["bevy", "gamedev", "rand", "random", "wyrand"]
categories = ["game-development", "game-engines"]
exclude = ["/.*"]
resolver = "2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
bevy = { version = "0.8.0", default-features = false }
serde = { version = "1.0", features = ["derive"], optional = true }
turborand = { git = "https://github.com/Bluefinger/turborand", default-features = false }

[dev-dependencies]
serde_json = "1.0"

[features]
default = ["wyrand"]
wyrand = ["turborand/wyrand"]
chacha = ["turborand/chacha"]
serialize = ["dep:serde", "turborand/serialize"]
rand = ["turborand/rand"]

[target.'cfg(target_arch = "wasm32")'.dev-dependencies]
wasm-bindgen-test = "0.3"

[target.'cfg(target_arch = "wasm32")'.dev-dependencies.instant]
version = "0.1"
features = ["wasm-bindgen"]

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]
rustc-args = ["--cfg", "docsrs"]
