[package]
name = "bevy_turborand"
version = "0.9.0"
edition = "2021"
authors = ["Gonçalo Rica Pais da Silva <bluefinger@gmail.com>"]
description = "A plugin to enable ECS optimised random number generation for the Bevy game engine."
repository = "https://github.com/Bluefinger/bevy_turborand"
license = "Apache-2.0 OR MIT"
keywords = ["bevy", "gamedev", "random", "wyrand", "chacha"]
categories = ["game-development", "game-engines"]
exclude = ["/.*"]
resolver = "2"

[features]
default = ["wyrand", "serialize"]
wyrand = ["turborand/wyrand"]
chacha = ["turborand/chacha"]
serialize = ["turborand/serialize", "dep:serde"]
rand = ["turborand/rand"]

[dependencies]
bevy = { version = "0.15", default-features = false }
serde = { version = "1.0", features = ["derive"], optional = true }
turborand = { version = "0.10", default-features = false, features = [
  "std",
  "fmt",
] }

[target.'cfg(target_arch = "wasm32")'.dependencies.instant]
version = "0.1"
features = ["wasm-bindgen"]

[dev-dependencies]
ron = "0.8"

[target.'cfg(target_arch = "wasm32")'.dev-dependencies]
wasm-bindgen-test = "0.3"

[package.metadata.docs.rs]
all-features = true
